# voxhora-techshare-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: flag-existing-techshare-emails.sh
src/voxhora_techshare_agent/: __init__.py  __main__.py  cli.py  config.py  email_parser.py  models.py  proxy_client.py  session.py  storage.py
tests/: test_email_parser.py  test_fetch_failures.py  test_pc_detection.py  test_storage.py
tests/fixtures/: email_dme.txt  email_plea.txt
