[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voxhora-techshare-agent"
version = "0.1.0"
description = "Standalone TechShare discovery automation for Travis County criminal defense attorneys; pairs with Voxhora."
authors = [{name = "Patrick Fagerberg", email = "patrickfagerberg@icloud.com"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
]

[project.scripts]
voxhora-techshare-agent = "voxhora_techshare_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
