[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voxhora-techshare-agent"
version = "0.2.0"
description = "TechShare discovery automation for Travis County criminal defense attorneys. Pairs with Voxhora. As of v0.2.0 (2026-05-27): cloud-agent friendly via credentials_override + cookie_storage='memory' constructor params on TechShareSession (used by voxhora-agent-cloud on Fly.io). Default behavior unchanged — Mac CLI flow + Voxhora-Mac DownloadJobsManager subprocess flow both pass through the legacy keychain + disk path."
authors = [{name = "Patrick Fagerberg", email = "patrickfagerberg@icloud.com"}]
requires-python = ">=3.9"
dependencies = [
    "extract-msg>=0.55",
    "requests>=2.31",
    "keyring>=24.0",
    # Static ffmpeg binary for discovery-video conversion (2026-07-11) —
    # attorneys' Macs have no Homebrew; storage.find_ffmpeg() falls back
    # to this wheel's bundled binary.
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
]

[project.scripts]
voxhora-techshare-agent = "voxhora_techshare_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
